add language to footer conatc  header stock

--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -13,5 +13,9 @@
     "drinks": "Drinks",
     "promotions": "Promotions",
     "contacts": "Contacts",
-    "favorites": "Favorites"
+    "favorites": "Favorites",
+    "new_arrivals": "New Arrivals",
+    "our": "Our",
+    "all_promotions": "All Promotions",
+    "payment_and_delivery": "Payment and Delivery"
 }
