--- a/public/locales/uz/header.json
+++ b/public/locales/uz/header.json
@@ -13,5 +13,9 @@
     "drinks": "Ichimliklar",
     "promotions": "Aksiyalar",
     "contacts": "Kontaktlar",
-    "favorites": "Sevimli"
+    "favorites": "Sevimli",
+    "new_arrivals": "Yangiliklar",
+    "our": "Bizning",
+    "all_promotions": "Barcha aksiyalar",
+    "payment_and_delivery": "To'lov va yetkazib berish"
 }
