--- a/public/locales/en/header.json
+++ b/public/locales/en/header.json
@@ -17,5 +17,8 @@
     "new_arrivals": "New Arrivals",
     "our": "Our",
     "all_promotions": "All Promotions",
-    "payment_and_delivery": "Payment and Delivery"
+    "payment_and_delivery": "Payment and Delivery",
+    "oops": "Oops! Looks like you're lost.",
+    "letUsGetYouBack": "Let's get you back",
+    "home": "home"
 }
