--- a/public/locales/ru/header.json
+++ b/public/locales/ru/header.json
@@ -17,5 +17,8 @@
     "new_arrivals": "Новинки",
     "our": "Наши",
     "all_promotions": "Все акции",
-    "payment_and_delivery": "Оплата и доставка"
+    "payment_and_delivery": "Оплата и доставка",
+    "oops": "Упс! Похоже, вы потерялись.",
+    "letUsGetYouBack": "Давайте вернем вас",
+    "home": "домой"
 }
