--- a/public/locales/uz/header.json
+++ b/public/locales/uz/header.json
@@ -17,5 +17,8 @@
     "new_arrivals": "Yangiliklar",
     "our": "Bizning",
     "all_promotions": "Barcha aksiyalar",
-    "payment_and_delivery": "To'lov va yetkazib berish"
+    "payment_and_delivery": "To'lov va yetkazib berish",
+    "oops": "Oops! Ko'rinadi, siz yo'qolganingiz.",
+    "letUsGetYouBack": "Keling, sizni qaytaramiz",
+    "home": "Bosh sahifa"
 }
